scripts/style.css
body {
    background: linear-gradient(to bottom, #9f601c, #4f1111); /* Ombre from pink to orange */
    font-family: Arial, sans-serif;
    text-align: center;
    height: 100vh; /* Full viewport height */
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.schpiel {
font-size: 20px;
font-family: Kode Mono;
font-weight: 400;
letter-spacing: 0%;
}
.logo{
    height:250px;
    width: 250px;
}
.beg-cont{
    height:600px;
    width: 700px;
    border-radius: 25px 45px; 
    background-color: #F6F4F0;
    padding: top 40px;
    padding:bottom 40px;
    padding-left: 60px;
    padding-right:60px;
}
.center-button {
    padding: 10px 20px; /* Adjust size of the button */
    font-size: 16px;
    font-family: Inter;
    font-weight: 400;
    letter-spacing: 0%;
    position: absolute;
    cursor: pointer; /* Makes the button clickable */
    background-color: #451010; /* Red background */
    color: white; /* White text */
    border: none;
    border-radius: 5px; /* Rounded corners */
    transition: background-color 0.3s; /* Smooth transition for hover effect */
    margin: auto;

}

.center-button:hover {
    background-color: #2c0c0c; /* Darker green when hovered */
}

.form-container {
    display: grid;
    grid-template-columns: repeat(2, 1fr); /* 2 columns */
    grid-template-rows: repeat(3, auto);   /* 3 rows */
    gap: 20px;
    max-width: 600px;  /* You can keep or adjust the max-width */
    margin: 20px auto;  /* This will center the form-container horizontally */
    justify-items: center;  /* Centers the text boxes horizontally */
}

input[type="text"] {
    padding: 10px;
    font-size: 16px;
    width: 400px;  /* Set a fixed width of 400px */
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 5px;
}

input[type="text"]:focus {
    outline: none;
    border-color: #4f1111;
}

